# npu-embedding

./: .gitignore  ACKNOWLEDGMENTS.md  ACKNOWLEDGMENTS.zh.md  CHANGELOG.md  CLAUDE.md  DEVELOP.md  README.md  README.zh.md  RELEASE.md  pyproject.toml
.playwright-mcp/: page-2026-04-17T10-04-07-644Z.yml  page-2026-04-17T10-04-20-070Z.yml  page-2026-04-17T10-04-32-448Z.yml  page-2026-04-17T10-06-50-835Z.yml  page-2026-04-17T10-06-56-177Z.yml  page-2026-04-17T10-07-13-773Z.yml  page-2026-04-17T10-07-40-515Z.yml  page-2026-04-17T10-07-49-572Z.yml  page-2026-04-17T10-08-03-432Z.yml  page-2026-04-17T10-08-06-563Z.yml  page-2026-04-17T10-08-20-452Z.yml  page-2026-04-17T10-08-21-628Z.yml  page-2026-04-17T10-08-34-612Z.yml  page-2026-04-17T10-08-45-168Z.yml  page-2026-04-17T10-08-59-412Z.yml  page-2026-04-17T10-09-29-548Z.yml  page-2026-04-17T10-10-27-963Z.yml  page-2026-04-17T10-13-41-224Z.yml  page-2026-04-17T10-13-47-322Z.yml
apps/attune-desktop/: .gitignore  Cargo.toml  tauri.conf.json
apps/attune-desktop/capabilities/: default.json
apps/attune-desktop/icons/: icon.icns
apps/attune-desktop/src/: embedded_server.rs  main.rs  tray.rs
docs/: TESTING.md  (+14 more)
npu-vault/: Cargo.toml  DEVELOP.md  README.md  RELEASE.md
npu-vault/crates/vault-core/: Cargo.toml
npu-vault/crates/vault-core/assets/plugins/: law.yaml  patent.yaml
npu-vault/crates/vault-core/src/: chat.rs  embed.rs  error.rs  index.rs  lib.rs  llm.rs  queue.rs  scanner_patent.rs  scanner_webdav.rs  search.rs  store.rs  taxonomy.rs  vault.rs  vectors.rs
npu-vault/crates/vault-core/src/infer/: embedding.rs  mod.rs  model_store.rs  provider.rs  reranker.rs
npu-vault/crates/vault-core/tests/: session_revoke_test.rs
npu-vault/crates/vault-server/: Cargo.toml
npu-vault/crates/vault-server/assets/: index.html
npu-vault/crates/vault-server/src/: lib.rs  main.rs  middleware.rs  state.rs
npu-vault/crates/vault-server/src/routes/: chat.rs  chat_sessions.rs  classify.rs  feedback.rs  index.rs  ingest.rs  items.rs  mod.rs  patent.rs  plugins.rs  profile.rs  remote.rs  search.rs  settings.rs  status.rs  tags.rs  upload.rs  ws.rs
npu-vault/crates/vault-server/tests/: index_path_test.rs  session_test.rs
npu-vault/tests/: server_test.rs
rust/: Cargo.toml  DEVELOP.md  README.md  README.zh.md  RELEASE.md
rust/crates/attune-cli/: Cargo.toml
rust/crates/attune-cli/src/: main.rs
rust/crates/attune-core/: Cargo.toml
rust/crates/attune-core/assets/plugins/ai_annotation_highlights/: plugin.yaml  prompt.md
rust/crates/attune-core/assets/plugins/ai_annotation_outdated/: plugin.yaml  prompt.md
rust/crates/attune-core/assets/plugins/ai_annotation_questions/: plugin.yaml  prompt.md
rust/crates/attune-core/assets/plugins/ai_annotation_risk/: plugin.yaml  prompt.md
rust/crates/attune-core/src/: annotation_weight.rs  asr.rs  chat.rs  chunker.rs  context_compress.rs  embed.rs  entities.rs  index.rs  intent_router.rs  lib.rs  llm.rs  memory_consolidation.rs  ocr.rs  parser.rs  platform.rs  plugin_loader.rs  plugin_registry.rs  plugin_sig.rs  project_recommender.rs  queue.rs  scanner.rs  scanner_webdav.rs  search.rs  store.rs  taxonomy.rs  vault.rs  vectors.rs  web_search.rs
rust/crates/attune-core/src/infer/: mod.rs  reranker.rs
rust/crates/attune-core/src/pii/: dictionary.rs  mod.rs  ner.rs  patterns.rs
rust/crates/attune-core/src/platform/: cpu_db.rs  mod.rs  region.rs  tier.rs
rust/crates/attune-core/src/resource_governor/: budget.rs  governor.rs  mod.rs  monitor.rs  profiles.rs  registry.rs
rust/crates/attune-core/src/store/: annotations.rs  audit.rs  auto_bookmarks.rs  browse_signals.rs  chunk_breadcrumbs.rs  chunk_summaries.rs  conversations.rs  dirs.rs  history.rs  items.rs  memories.rs  mod.rs  project.rs  queue.rs  signals.rs  types.rs  web_search_cache.rs
rust/crates/attune-core/src/workflow/: builtins.rs  mod.rs  ops.rs  runner.rs  schema.rs
rust/crates/attune-core/tests/: entities_test.rs  governor_integration.rs  memory_consolidation_integration.rs  migration_roundtrip_test.rs  parse_golden_set_regression.rs  project_recommender_test.rs  rag_quality_benchmark.rs  rag_w2_batch1_integration.rs  rag_w3_batch_a_integration.rs  rag_w3_batch_b_integration.rs  workflow_test.rs
rust/crates/attune-core/tests/fixtures/parse_corpus/: 001-rust-ownership.md  002-china-civil-code.md  003-tech-blog.md  004-news-article.md  005-academic-paper.md  manifest.yaml
rust/crates/attune-server/: Cargo.toml
rust/crates/attune-server/assets/: index.html
rust/crates/attune-server/src/: lib.rs  main.rs  middleware.rs  state.rs
rust/crates/attune-server/src/routes/: ai_stack.rs  audit.rs  auto_bookmarks.rs  browse_signals.rs  chat.rs  clusters.rs  errors.rs  index.rs  ingest.rs  items.rs  llm.rs  mod.rs  plugins.rs  privacy.rs  profile.rs  projects.rs  search.rs  settings.rs  skills.rs  status.rs  upload.rs  vault.rs  web_search_cache.rs  ws.rs
rust/crates/attune-server/tests/: lib_runtime_test.rs  projects_routes_test.rs  vault_setup_test.rs
rust/crates/attune-server/ui/: package-lock.json  package.json  tsconfig.json
rust/crates/attune-server/ui/src/: App.tsx  main.tsx
rust/crates/attune-server/ui/src/components/: ChatInput.tsx  ChatMessage.tsx  CommandPalette.tsx  Modal.tsx  Reader.tsx  RecommendationOverlay.tsx  index.ts
rust/crates/attune-server/ui/src/hooks/: useChat.ts  useSkills.ts
rust/crates/attune-server/ui/src/i18n/: en.ts  zh.ts
rust/crates/attune-server/ui/src/layout/: DrawerHost.tsx  MainShell.tsx  Sidebar.tsx  index.ts
rust/crates/attune-server/ui/src/store/: signals.ts  ws.ts
rust/crates/attune-server/ui/src/styles/: animations.css
rust/crates/attune-server/ui/src/views/: ChatView.tsx  ItemsView.tsx  KnowledgeView.tsx  ProjectsView.tsx  RemoteView.tsx  SettingsView.tsx  SkillsView.tsx  index.ts
rust/crates/attune-server/ui/src/wizard/: LoginScreen.tsx  Step1Welcome.tsx  Step2Password.tsx  Step3LLM.tsx  Step4Hardware.tsx  Step5Data.tsx  Stepper.tsx  Wizard.tsx  WizardDone.tsx  index.ts  types.ts
rust/tests/: corpus_integration_test.rs
rust/tests/golden/: queries.json
(+113 files in other folders)
