[workspace]
resolver = "2"
members = ["crates/vault-core", "crates/vault-cli", "crates/vault-server"]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[package]
name = "npu-vault"
version = "0.1.0"
edition.workspace = true
publish = false

[dev-dependencies]
vault-core = { path = "crates/vault-core" }
vault-server = { path = "crates/vault-server" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
serde_json = "1"

[[test]]
name = "server_test"
path = "tests/server_test.rs"
