[package]
name = "vault-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "vault_server"
path = "src/lib.rs"

[[bin]]
name = "npu-vault-server"
path = "src/main.rs"

[dependencies]
vault-core = { path = "../vault-core" }
axum = { version = "0.8", features = ["json", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
dirs = "5"
