[package]
name = "attune-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "attune"
path = "src/main.rs"

[dependencies]
attune-core = { path = "../attune-core" }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
serde_json = { workspace = true }

[lints]
workspace = true
