[package]
name = "attune-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
usearch = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
tantivy = "0.22"
tantivy-jieba = "0.11"
walkdir = "2"
notify = "8"
log = "0.4"
hdbscan = "0.11"
serde_yaml = "0.9"
tempfile = "3"
pdf-extract = "0.8"
zip = "2"
ort = { version = "2.0.0-rc.12", features = ["cuda", "ndarray"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
hf-hub = "0.3"
ndarray = "0.16"
chromiumoxide = "0.9"
scraper = "0.21"
urlencoding = "2"
futures = "0.3"
