[package]
name = "attune-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = { workspace = true }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
usearch = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { workspace = true, features = ["blocking"] }
tokio = { workspace = true }
tantivy = "0.22"
tantivy-jieba = "0.11"
walkdir = "2"
notify = "8"
log = "0.4"
hdbscan = "0.11"
serde_yaml = "0.9"
tempfile = "3"
pdf-extract = "0.8"
zip = "2"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "tracing", "tls-native", "copy-dylibs", "api-24", "download-binaries"] }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
hf-hub = "0.3"
scraper = "0.21"
urlencoding = "2"
# 跨平台 PATH 二进制查找（替代 `which`/`where`，Win/Linux/macOS 一致行为）
which = "6"
# P1: 插件签名校验 (ed25519) —— 预留，PluginHub 上线前官方公钥占位
ed25519-dalek = "2"
base64 = "0.22"
regex = "1"
# H1 资源治理：跨平台 CPU/RAM 采样（Linux /proc · Win PDH · macOS task_info）
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[features]
default = []
cuda = ["ort/cuda"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
# 集成测试用：暴露 __test_seed_* 等内部 fixture helper。生产构建不开。
test-utils = []

# Self-dev-dependency：让 `cargo test -p attune-core` 自动启用 test-utils feature，
# 集成测试无需 --features 显式开启。生产 `cargo build` 不受影响（仅 dev profile）。
[dev-dependencies]
attune-core = { path = ".", features = ["test-utils"] }

[lints]
workspace = true
