[package]
name = "attune-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "attune_server"
path = "src/lib.rs"

[[bin]]
name = "attune-server-headless"
path = "src/bin/headless.rs"

[dependencies]
attune-core = { path = "../attune-core" }
axum = { version = "0.8", features = ["json", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
dirs = "5"
lru = "0.12"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
