[package]
name = "attune-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "attune_server"
path = "src/lib.rs"

[[bin]]
name = "attune-server-headless"
path = "src/bin/headless.rs"

[dependencies]
attune-core = { path = "../attune-core" }
axum = { version = "0.8", features = ["json", "multipart", "ws"] }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
# dirs：原 5，统一到 workspace = 6
dirs = { workspace = true }
lru = "0.12"
uuid = { version = "1", features = ["v4"] }
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"

[lints]
workspace = true
